--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "add": "^2.0.6",
     "antd": "^4.18.4",
+    "axios": "^0.25.0",
     "craco-less": "^2.0.0",
     "react": "^17.0.2",
     "react-country-flag": "^3.0.2",
