--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "engines": {
-    "node": "16.x"
+    "node": "14.18.3",
+    "npm": "6.14.15",
+    "yarn": "1.22.17"
   },
   "dependencies": {
     "@google-cloud/storage": "^5.18.0",
