--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "antd": "^4.18.4",
     "axios": "^0.25.0",
     "craco-less": "^2.0.0",
+    "js-beautify": "^1.14.0",
     "react": "^17.0.2",
     "react-country-flag": "^3.0.2",
     "react-dom": "^17.0.2",
