--- a/client/package.json
+++ b/client/package.json
@@ -53,6 +53,10 @@
   },
   "proxy": "http://localhost:8080",
   "devDependencies": {
-    "@babel/core": "7.16.12"
+    "@babel/core": "^7.17.0",
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
+    "webpack": "^5.68.0",
+    "webpack-cli": "^4.9.2"
   }
 }
