--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "add": "^2.0.6",
+    "ahooks": "^3.1.9",
     "antd": "^4.18.4",
     "axios": "^0.25.0",
     "craco-less": "^2.0.0",
